# sales-pipeline-project

./: Dockerfile  README.md  docker-compose.yml  example.env  init.sql  init_sales_data.sql  main.py  pyproject.toml  requirements.txt  testconnect.py
creating_files/: start.py
creating_files/data/: sales_data_20241026_094937.csv  sales_data_20241026_094948.csv  sales_data_20241026_095000.csv  sales_data_20241026_140229.csv  sales_data_20241026_140241.csv  sales_data_20241026_140252.csv  sales_data_20241026_140304.csv  sales_data_20241026_140316.csv  sales_data_20241026_150917.csv  sales_data_20241026_150928.csv  sales_data_20241026_150940.csv  sales_data_20241026_150952.csv  sales_data_20241026_151004.csv
data/: combined_cleaned_data.csv  sales_data_20241027_180220.csv  sales_data_20241027_180612.csv  sales_data_20241027_181039.csv  sales_data_20241027_181053.csv  sales_data_20241027_181107.csv  sales_data_20241027_181120.csv  sales_data_20241027_181133.csv  sales_data_20241027_181146.csv  sales_data_20241027_181201.csv  sales_data_20241027_181216.csv  sales_data_20241027_181231.csv  sales_data_20241027_181247.csv  sales_data_20241027_234259.csv  sales_data_20241027_234406.csv  sales_data_20241027_234517.csv  sales_data_20241027_234748.csv  sales_data_20241028_200829.csv  sales_data_20241028_200903.csv  sales_data_20241028_200937.csv  sales_data_20241028_201007.csv
data_consolidated/: combined_cleaned_data.csv
etl/: extract.py  load.py  transform.py
frontend/: Dockerfile  app.py
kafka_etl/: kafka_consumer.py  kafka_producer.py
src/: main.py
(+13 files in other folders)
