[tool.poetry]
name = "sales-pipeline-project"
version = "0.1.0"
description = ""
authors = ["Caio Machado <moliveiracaio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
boto3 = "^1.35.49"
pydantic = "^2.9.2"
streamlit = "^1.39.0"
faker = "^30.8.1"
datetime = "^5.5"
python-dotenv = "^1.0.1"
schedule = "^1.2.2"
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"
chardet = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
